# J-Social

./: README.md  db.sqlite3  pyproject.toml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_followerscount.py
social_book/: settings.py  urls.py
templates/: followers.html  following.html  index.html  profile.html  setting.html  signin.html  signup.html
