[tool.poetry]
name = "social-book"
version = "0.1.0"
description = "Social Media"
authors = ["Nikita Ch."]
readme = "README.md"
packages = [{include = "social_book"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
pillow = "^9.5.0"
django-countries = "^7.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
